@@ -1,7 +1,8 @@
 Dosage 2.0 (released xx.xx.2013)
 
 Features:
-- comics: Added SnowFlakes, StuffNoOneToldMe and WebDesignerCOTW.
+- comics: Added ExtraOrdinary, SnowFlakes,
+  StuffNoOneToldMe and WebDesignerCOTW.
 - comics: Added the --vote option to vote for popular comics.
 
 Changes:
